# pandoc-qr

./: LICENSE  pandoc-qr.cabal
app/: Main.hs
src/: MyLib.hs
