cabal-version:      3.0
name:               pandoc-qr
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Marek Hilton
maintainer:         marek.hilton1@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                 ,    pandoc-types
                 ,    process
                 ,    text
                 ,    transformers
                 ,    temporary
    hs-source-dirs:   src
    default-language: Haskell2010

executable pandoc-qr
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        pandoc-qr

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite pandoc-qr-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        pandoc-qr
